--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -111,4 +111,6 @@
         <item>"1,1"</item>
         <item>"7,1"</item>
     </string-array>
+    
+    <bool name="config_showNavigationBar">true</bool>
 </resources>
