--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -20,8 +20,7 @@
 <!-- These resources are around just to allow their values to be customized
      for different hardware and product builds. -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-
-    <!-- If this is true, the screen will come on when you unplug usb/power/whatever. -->
+  
     <bool name="config_unplugTurnsOnScreen">true</bool>
 
     <!-- If true, the screen can be rotated via the accelerometer in all 4
@@ -36,11 +35,11 @@
 
     <!-- Component name of the service providing network location support. -->
     <!-- string name="config_networkLocationProvider">com.google.android.location.NetworkLocationProvider</string -->
-    <string name="config_networkLocationProviderPackageName">com.google.android.location.NetworkLocationProvider</string>
+    <string name="config_networkLocationProviderPackageName">com.google.android.location</string>
 
     <!-- Component name of the service providing geocoder API support. -->
     <!-- string name="config_geocodeProvider">com.google.android.location.GeocodeProvider</string -->
-    <string name="config_geocodeProviderPackageName">com.google.android.location.GeocodeProvider</string>
+    <string name="config_geocodeProviderPackageName">com.google.android.location</string>
 
     <!-- Flag indicating whether we should enable the automatic brightness in Settings.
          config_hardware_automatic_brightness_available is not set, so we will use software implementation -->
@@ -83,34 +82,22 @@
 	         For example, a device with Home, Back and Menu keys would set this
 	         config to 7. -->
 	    <!-- integer name="config_deviceHardwareKeys">2</integer -->
-
-    <!-- XXXXX NOTE THE FOLLOWING RESOURCES USE THE WRONG NAMING CONVENTION.
-         Please don't copy them, copy anything else. -->
-
-    <!-- This string array should be overridden by the device to present a
-         list of network attributes. This is used by the connectivity manager
-         to decide which networks can coexist based on the hardware -->
-    <!-- An Array of "[Connection name],[ConnectivityManager connection type],
-         [associated radio-type],[priority],[restoral-timer(ms)],
-         [dependencyMet] -->
-    <!-- the 5th element "resore-time" indicates the number of milliseconds
-         to delay before automatically restore the default connection.
-         Set -1 if the connection does not require auto-restore. -->
-    <!-- the 6th element indicates boot-time dependency-met value. -->
-    <string-array translatable="false" name="networkAttributes">
-        <item>"wifi,1,1,2,-1,true"</item>
-        <item>"bluetooth,7,7,0,-1,true"</item>
-    </string-array>
-
-    <!-- This string array should be overridden by the device to present a
-         list of radio attributes. This is used by the connectivity manager
-         to decide which networks can coexist based on the hardware -->
-    <!-- An Array of "[ConnectivityManager connectionType],
-         [# simultaneous connection types]" -->
-    <string-array translatable="false" name="radioAttributes">
-        <item>"1,1"</item>
-        <item>"7,1"</item>
-    </string-array>
-    
+  
     <bool name="config_showNavigationBar">true</bool>
+    
+    <bool translatable="false" name="config_wifi_dual_band_support">false</bool>
+    
+    <bool translatable="false" name="config_wifi_background_scan_support">true</bool>
+    
+    <bool translatable="false" name="config_wifi_p2p_support">false</bool>
+    
+    <integer name="config_screenBrightnessDim">30</integer>
+    
+    <integer name="db_connection_pool_size">3</integer>
+    
+    <integer name="config_cursorWindowSize">2048</integer>
+    
+    <integer name="config_lowBatteryCloseWarningLevel">15</integer>
+    
+    <integer name="config_lowBatteryWarningLevel">10</integer>
 </resources>
