use wlan0 as default interface for stats

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -100,4 +100,6 @@
     <integer name="config_lowBatteryCloseWarningLevel">15</integer>
     
     <integer name="config_lowBatteryWarningLevel">10</integer>
+    
+    <string name="config_datause_iface">wlan0</string>
 </resources>
