--- a/overlay/frameworks/base/core/res/res/xml/storage_list.xml
+++ b/overlay/frameworks/base/core/res/res/xml/storage_list.xml
@@ -37,7 +37,7 @@
     <storage android:mountPoint="/storage/sdcard0"
     		 android:storageDescription="@string/storage_internal"
     		 android:primary="true"
-                 android:emulated="false"
+                 android:emulated="true"
                  android:allowMassStorage="true" 
     		 android:removable="false" 
                  android:mtpReserve="100"
